--- a/.github/workflows/admin-ci-cd.yaml
+++ b/.github/workflows/admin-ci-cd.yaml
@@ -3,12 +3,16 @@ name: Email Service CI/CD
 
 on:
   push:
+    paths:
+      - '/'
     branches: [ main ]
   pull_request:
+    paths:
+      - '/'
     branches: [ main ]
 
 env:
-  IMAGE_NAME: handyshare/admin:latest
+  IMAGE_NAME: handyshare/admin
   DOCKER_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
 
 jobs:
@@ -33,7 +37,7 @@ jobs:
         password: ${{ secrets.DOCKER_HUB_TOKEN }}
       
     - name: Build and push Docker image
-      working-directory: ./email
+      working-directory: ./
       run: |
       
         docker build -t $DOCKER_USERNAME/$IMAGE_NAME:$GITHUB_SHA .
