--- a/.github/workflows/admin-ci-cd.yaml
+++ b/.github/workflows/admin-ci-cd.yaml
@@ -10,7 +10,7 @@ on:
     branches: [ main ]
 
 env:
-  IMAGE_NAME: handyshare/admin
+  IMAGE_NAME: admin
   DOCKER_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
 
 jobs:
