Update admin CI/CD workflow: change deployment name from admin-deployment to admin-service

--- a/.github/workflows/admin-ci-cd.yaml
+++ b/.github/workflows/admin-ci-cd.yaml
@@ -43,5 +43,5 @@ jobs:
     - name: Deploy to Kubernetes
       run: |
         kubectl apply -f k8s/
-        kubectl rollout restart deployment admin-deployment
-        kubectl rollout status deployment admin-deployment
+        kubectl rollout restart deployment admin-service
+        kubectl rollout status deployment admin-service
